fixed chorus pics on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -938,6 +938,13 @@ body {
         height: 60%;
     }
 
+    .futureChorusPic {
+        width: 100%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
     .garajePics {
         width: 100%;
         padding-top: 10%;
